--- a/administrador/templates/administrador/lista_jugadoras.html
+++ b/administrador/templates/administrador/lista_jugadoras.html
@@ -30,6 +30,7 @@
 </ul>
 {% if validar %}
 <div class="container-button">
-  <a href="{% url 'administrador:lista_PreRegistro' %}"><button class="submit" type="button">Terminar Solicitud</button></a>
+  <a href="{% url 'administrador:lista_PreRegistro' %}">
+      <button class="submit" type="button">Terminar Solicitud</button></a>
 </div>
 {% endif %}
