--- a/coaches/templates/coaches/agregar_jugadora.html
+++ b/coaches/templates/coaches/agregar_jugadora.html
@@ -105,7 +105,8 @@
 
 
     <div class="container-button">
-      <a href="{% url 'coaches:terminar_registro' codigo %}"><button class="cancel" type="button">Guardar y cerrar solicitud</button></a>
+      <a href="{% url 'coaches:terminar_registro' codigo %}">
+          <button class="cancel" type="button">Guardar y cerrar solicitud</button></a>
       <button class="submit" type="submit">Guardar y agregar jugadora</button>
     </div>
   </div>
