--- a/equipo/templates/equipo/equipo_detail.html
+++ b/equipo/templates/equipo/equipo_detail.html
@@ -94,7 +94,9 @@
             <p>Esta seguro de que quiere eliminar "{{ jugadora.nombre }}" del equipo {{ equipo.nombre}}?</p>
           </div>
           <div class="modal-footer">
-            <button id="cancel" type="button" class="modal-action modal-close waves-effect cancel cancel-delete" data-target="delete">Cancelar</button>
+            <button id="cancel" type="button"
+                    class="modal-action modal-close waves-effect cancel cancel-delete" data-target="delete">Cancelar
+            </button>
             <button class="submit" type="submit">Borrar</button>
         </form>
         </div>
