--- a/landing/templates/landing/lista_partidos.html
+++ b/landing/templates/landing/lista_partidos.html
@@ -22,7 +22,9 @@
       <span>Cancha: {{partido.cancha}}</span>
       <br>
       {% if partido.fecha < datetime %}
-      <a href="{% url 'landing:detalle_partido' jornada.torneo.id partido %}"><div class="button secondary-button">Ver Mas</div></a>
+      <a href="{% url 'landing:detalle_partido' jornada.torneo.id partido %}">
+          <div class="button secondary-button">Ver Mas</div>
+      </a>
       {% endif %}
       <br>
     </div>
