--- a/landing/templates/landing/torneos.html
+++ b/landing/templates/landing/torneos.html
@@ -88,7 +88,8 @@
                     <span class="black-text">Pre-Registro:</span>
                     <br>
                     <div class="cta-container">
-                      <a href="{% url 'coaches:pre_registro' Torneo.id %}" class="button primary-button waves-effect waves-light btn">Solicitar</a>
+                      <a href="{% url 'coaches:pre_registro' Torneo.id %}"
+                         class="button primary-button waves-effect waves-light btn">Solicitar</a>
                     </div>
                 </div>
             {% endif %}
