--- a/torneo/templates/torneo/agregar_torneo.html
+++ b/torneo/templates/torneo/agregar_torneo.html
@@ -43,7 +43,8 @@
       <label>
           {{ form.fecha_inicio.label_tag }}
         </label>
-      <input type="date" name="{{form.fecha_inicio.html_name}}" required="" class="datepicker" id="{{form.fecha_inicio.id_for_label}}" /> {{ form.fecha_inicio.errors }}
+      <input type="date" name="{{form.fecha_inicio.html_name}}" required="" class="datepicker"
+             id="{{form.fecha_inicio.id_for_label}}" /> {{ form.fecha_inicio.errors }}
     </div>
 
       <div class="col s12">
