--- a/landing/templates/landing/social.html
+++ b/landing/templates/landing/social.html
@@ -42,7 +42,13 @@
   <div class="container">
     <div class="row">
       <div class="col l6 m12">
-      <div class="fb-page" data-href="https://www.facebook.com/PlanLibelula/" data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/PlanLibelula/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/PlanLibelula/">Plan Libélula Desarrollo Integral</a></blockquote></div>
+      <div class="fb-page" data-href="https://www.facebook.com/PlanLibelula/" data-tabs="timeline" data-width="500"
+           data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+           data-show-facepile="true">
+          <blockquote cite="https://www.facebook.com/PlanLibelula/" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/PlanLibelula/">Plan Libélula Desarrollo Integral</a>
+          </blockquote>
+      </div>
       </div>
       <div class="col l6 m12" id="quote-div" >
           <span id="quote">"Las oportunidades no pasan, las creas..." <br>- Chris Grosser.</span>
