--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -26,11 +26,13 @@
             <form action="." method="POST">
                 {% csrf_token %}
                 <div class="input-field">
-                    <input type="text" class="validate" name="{{form.username.html_name}}" id="{{ form.username.id_for_label }}" required/>
+                    <input type="text" class="validate" name="{{form.username.html_name}}"
+                           id="{{ form.username.id_for_label }}" required/>
                     <label for="{{form.username.id_for_label}}">Usuario</label>
                 </div>
                 <div class="input-field">
-                    <input class="validate" name="password" type="password" name="{{form.password.html_name}}" id="{{ form.password.id_for_label }}" required/>
+                    <input class="validate" name="password" type="password" name="{{form.password.html_name}}"
+                           id="{{ form.password.id_for_label }}" required/>
                     <label for="{{form.password.id_for_label}}">Contraseña</label>
                 </div>
                 <div class="cta-container">
