--- a/torneo/templates/torneo/editar_partido.html
+++ b/torneo/templates/torneo/editar_partido.html
@@ -12,7 +12,8 @@
         <label>
           {{ form.fecha.label_tag }}
         </label>
-        <input type="date" name="{{form.fecha.html_name}}" class="datepicker" id="{{form.fecha.id_for_label}}" value="{{ form.fecha.value|date:"Y-m-d" }}" required/>
+        <input type="date" name="{{form.fecha.html_name}}" class="datepicker"
+               id="{{form.fecha.id_for_label}}" value="{{ form.fecha.value|date:"Y-m-d" }}" required/>
       </p>
       {{ form.fecha.errors }}
     </div>
@@ -21,7 +22,8 @@
         <label>
           {{ form.hora.label_tag }}
         </label>
-        <input type="text" name="{{form.hora.html_name}}" class="timepicker" id="{{form.hora.id_for_label}}" value="{{ form.hora.value}}" required/>
+        <input type="text" name="{{form.hora.html_name}}" class="timepicker"
+               id="{{form.hora.id_for_label}}" value="{{ form.hora.value}}" required/>
       </p>
       {{ form.hora.errors }}
     </div>
