--- a/torneo/templates/torneo/torneo_editar.html
+++ b/torneo/templates/torneo/torneo_editar.html
@@ -5,7 +5,8 @@
 <div class="title-container">
   <h2>Editar Torneo<h2>
 </div>
-<form class="container" novalidate action="{% url 'torneo:editar_torneo' torneo.id %}" enctype="multipart/form-data" method="POST">
+<form class="container" novalidate action="{% url 'torneo:editar_torneo' torneo.id %}"
+      enctype="multipart/form-data" method="POST">
     {% csrf_token %}
     <div class="row">
       <div class="col s12 m6 l6">
@@ -50,7 +51,8 @@
               {{ form.fecha_inicio.label_tag }}
 
           </label>
-          <input type="date" name="{{form.fecha_inicio.html_name}}" required="" value='{{ form.fecha_inicio.value|date:"Y-m-d" }}' id="{{form.fecha_inicio.id_for_label}}" class="datepicker">
+          <input type="date" name="{{form.fecha_inicio.html_name}}" required=""
+                 value='{{ form.fecha_inicio.value|date:"Y-m-d" }}' id="{{form.fecha_inicio.id_for_label}}" class="datepicker">
       </p>
         {{ form.fecha_inicio.errors }}
       </div>
@@ -59,7 +61,8 @@
               <label>
                   {{ form.fecha_junta.label_tag }}
               </label>
-            <input type="date" name="{{form.fecha_junta.html_name}}" required="" value='{{ form.fecha_junta.value|date:"Y-m-d" }}' id="{{form.fecha_junta.id_for_label}}" class="datepicker">
+            <input type="date" name="{{form.fecha_junta.html_name}}" required=""
+                   value='{{ form.fecha_junta.value|date:"Y-m-d" }}' id="{{form.fecha_junta.id_for_label}}" class="datepicker">
 
           </p>
             {{ form.fecha_junta.errors }}
