Agregar archivos carta femexfut, logo Permisos de preregistro a administrados

--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -85,7 +85,7 @@ Pertenecer a estos organismos permite registrar el seguimiento de participación
      </div>
      <div class="button secondary-button">
        <a href="http://amateur.femexfut.org.mx/#/FutbolentuEstado/" target="_blank">
-         Visitar página Femexfut
+         Visitar página FEMEXFUT
        </a>
      </div>
     </div>
