--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,10 +11,10 @@
       </a>
       <a href="mailto:admin@planlibelulas">
           <img class="icon" src="{% static 'static_media/mail.svg' %}" alt="mail" height="24" width="24"/>
-
+      </a>
 
       <a href="http://amateur.femexfut.org.mx/#/FutbolentuEstado/">
-          <img class="icon" src="{% static 'static_media/femexfut.png' %}" alt="mail" height="24" width="24"/>
+          <img class="icon" src="{% static 'static_media/logo.png' %}" alt="femexfut" height="24" width="24"/>
       </a>
     </div>
     <span class="small"> Plan Libélula Desarrollo Integral | <a href="{% url 'login' %}">Acceso</a></span>
