Cambiar template modificar jugadora

--- a/jugadora/templates/jugadora/editar_jugadora.html
+++ b/jugadora/templates/jugadora/editar_jugadora.html
@@ -46,7 +46,7 @@
         <label>
           {{ form.nacimiento.label_tag }}
         </label>
-          <input type="date" name="{{form.nacimiento.html_name}}" required="" value='{{form.Nacimiento.value|date:"Y-m-d"}}'   id="{{form.Nacimiento.id_for_label}}" class="datepicker">
+          <input type="date" name="{{form.nacimiento.html_name}}" required="" value='{{form.nacimiento.value|date:"Y-m-d"}}'   id="{{form.nacimiento.id_for_label}}" class="datepicker">
       </p>
       {{ form.nacimiento.errors }}
       <p>
