--- a/administrador/templates/administrador/lista_jugadoras.html
+++ b/administrador/templates/administrador/lista_jugadoras.html
@@ -2,7 +2,7 @@
 <ul class="collection">
   {% for jugadora in jugadoras_equipo %}
   <li class="collection-item avatar">
-    {% if jugadora.Imagen %}
+    {% if jugadora.imagen %}
       <img src="{{ jugadora.imagen.url }}" alt="" class="circle" />
     {% else %}
       <img src="{% static 'static_media/default.jpg' %}" alt="" class="circle" />
