--- a/equipo/templates/equipo/agregar_equipo.html
+++ b/equipo/templates/equipo/agregar_equipo.html
@@ -15,7 +15,7 @@
         <span>Agregar Logo</span>
       </div>
       <div class="absolute-icons">
-          <input type="file" name="{{form.logo.html_name}}" required="" onchange="loadFile(event)"  id="{{form.logo.id_for_label}}" class="inputfile"/>
+          <input type="file" name="{{form.logo.html_name}}" accept="image/jpeg, image/jpg" required="" onchange="loadFile(event)"  id="{{form.logo.id_for_label}}" class="inputfile"/>
       </div>
     </div>
     {{ form.logo.errors }}
