--- a/jugadora/templates/jugadora/jugadora_detail.html
+++ b/jugadora/templates/jugadora/jugadora_detail.html
@@ -41,7 +41,7 @@
       </div>
 
         <div class="input-field col s12 m6">
-            <input disabled value="{{jugadora.FechaDeAfiliacion}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
+            <input disabled value="{{jugadora.fecha_de_afiliacion}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
             <label for="disabled">Fecha De Afiliacion</label>
         </div>
 
