--- a/torneo/templates/torneo/CedulaPDF_template.html
+++ b/torneo/templates/torneo/CedulaPDF_template.html
@@ -179,17 +179,7 @@ body{
         </table>
 </div>
 
-<style>
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-}
-</style>
-
-<div class="footer">
+<div>
 
         <h3>Total de Goles: &nbsp;&nbsp;&nbsp;&nbsp;{{partido.equipo_local.nombre}}:________________  VS {{partido.equipo_visitante.nombre}}________________ </h3>
 
@@ -198,6 +188,8 @@ body{
 
     <h3>Cambios:</h3>
             <div class="col s4 align-wrapper"><br><hr></div>
+            <div class="col s4 align-wrapper"><br><hr></div>
+            <div class="col s4 align-wrapper"><br><hr></div><div class="col s4 align-wrapper"><br><hr></div>
             <div class="col s4 align-wrapper"><br><hr></div>
             <div class="col s4 align-wrapper"><br><hr></div>
 
