--- a/jugadora/templates/jugadora/editar_jugadora.html
+++ b/jugadora/templates/jugadora/editar_jugadora.html
@@ -27,7 +27,7 @@
     </div>
     {{ form.imagen.errors }}
   </div>
-  <div class="form-column">
+ <div class="form-column">
       <p>
         <label>
           {{ form.nombre.label_tag }}
@@ -46,7 +46,7 @@
         <label>
           {{ form.nacimiento.label_tag }}
         </label>
-          <input type="date" name="{{form.nacimiento.html_name}}" required="" value='{{form.nacimiento.value|date:"Y-m-d"}}'   id="{{form.nacimiento.id_for_label}}" class="datepicker">
+        {{ form.nacimiento }}
       </p>
       {{ form.nacimiento.errors }}
       <p>
@@ -63,13 +63,53 @@
         {{ form.posicion }}
       </p>
       {{ form.posicion.errors }}
+
       <p>
-          <label>
-              {{ form.equipo.label_tag }}
-          </label>
-          {{ form.equipo }}
+        <label>
+          {{ form.fecha_de_afiliacion.label_tag }}
+        </label>
+        {{ form.fecha_de_afiliacion }}
       </p>
+      {{ form.fecha_de_afiliacion.errors }}
+
+       <p>
+        <label>
+          {{ form.num_poliza.label_tag }}
+        </label>
+        {{ form.num_poliza }}
+      </p>
+      {{ form.num_poliza.errors }}
+
+
+      <p>
+        <label>
+          {{ form.nui.label_tag }}
+        </label>
+        {{ form.nui }}
+      </p>
+      {{ form.nui.errors }}
+
+      {% if equipo == '' %}
+          <p>
+              <label>
+                  {{ form.equipo.label_tag }}
+              </label>
+              {{ form.equipo }}
+          </p>
            {{ form.equipo.errors }}
+      {% else %}
+          <p>
+              <label>
+                   {{ form.equipo.label_tag }}
+              </label>
+              <select name="{{ form.equipo.name }}" required id="{{ form.equipo.id_for_label }}">
+                <option value="{{ lista_equipo.pk }}" selected>{{ lista_equipo.nombre }}</option>
+              </select>
+          </p>
+
+
+      {% endif %}
+
       <p>
         <label>
           {{ form.notas.label_tag }}
@@ -77,9 +117,16 @@
         {{ form.notas }}
       </p>
       {{ form.notas.errors }}
+
+
+
     <div class="container-button">
-      <a href="{% url 'jugadora:ver_jugadoras' %}" class="cancel">Cancelar</a>
-      <button class="submit" type="submit">Enviar</button>
+      {% if equipo %}
+      <a href="{% url 'equipo:detalle_equipo' equipo %}"><button class="cancel" type="button">Cancelar</button></a>
+      {% else %}
+      <a href="{% url 'jugadora:ver_jugadoras' %}"><button class="cancel" type="button">Cancelar</button></a>
+      {% endif %}
+      <button class="submit" type="submit">Guardar</button>
     </div>
   </div>
 </form>
