--- a/landing/templates/landing/detalle_jugadora.html
+++ b/landing/templates/landing/detalle_jugadora.html
@@ -37,8 +37,8 @@
         </div>
         <div class="container">
           <div class="column">
-            <h6>De {{asistencia_equipo}} partidos ha jugado</h6>
-            <div class="graph" id="partidos" data-value="{{asistenciaE}} {{asistencia}}">
+            <h6>Ha jugado</h6>
+            <div class="graph" id="partidos" data-value="{{asistencia}} {{asistencia}}">
               <span class="absolute">partidos</span>
             </div>
             <h5><strong>Partidos Jugados</strong></h5>
