--- a/landing/templates/landing/detalle_jugadora.html
+++ b/landing/templates/landing/detalle_jugadora.html
@@ -38,7 +38,7 @@
         <div class="container">
           <div class="column">
             <h6>Ha jugado</h6>
-            <div class="graph" id="partidos" data-value="{{asistencia}} {{asistencia}}">
+            <div class="graph" id="partidos" data-value="1 {{asistencia}}">
               <span class="absolute">partidos</span>
             </div>
             <h5><strong>Partidos Jugados</strong></h5>
