--- a/landing/templates/landing/detalle_torneo.html
+++ b/landing/templates/landing/detalle_torneo.html
@@ -209,13 +209,11 @@
               {% for gol in goles %} {% if forloop.first %}
               <li class="collection-item avatar big align-items">
                 <a href="{% url 'landing:detalle_jugadora' gol.jugadora__equipo gol.jugadora__id %}">
-                  <div>
                     {% if gol.jugadora__imagen %}
                   <img src="/media/{{gol.jugadora__imagen}}" alt="{{goles.jugadora__nombre}} imagen" class="circle big" /> {% else %}
                   <img src="{% static 'static_media/default.jpg' %}" alt="{{goles.jugadora__nombre}} imagen" class="circle big" /> {% endif %}
-                  </div>
-                      <div><h6><strong>{{ gol.jugadora__nombre }} {{ gol.jugadora__apellido }}</strong></h6></div>
-                  <div><h6 class="secondary-content top">{{ gol.goles}}</h6></div>
+                      <h8><strong>{{ gol.jugadora__nombre }} {{ gol.jugadora__apellido }}</strong></h8>
+                  <h6 class="secondary-content top">{{ gol.goles}}</h6>
                 </a>
               </li>
               {% else %}
