--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,7 +9,7 @@
       <a href="https://www.facebook.com/PlanLibelula/" >
           <img class="icon" src="{% static 'static_media/facebook-logo.svg' %}" alt="facebook" height="24" width="24"/>
       </a>
-      <a href="mailto:hola@planlibelulas">
+      <a href="mailto:hola@planlibelula.com">
           <img class="icon" src="{% static 'static_media/mail.svg' %}" alt="mail" height="24" width="24"/>
       </a>
 
